# RPIMotionDetection

./: Blob.h  CMakeLists.txt  DisplayBlobs.cpp  DisplayImage.cpp  Fps.h  Gestures.cpp  Gestures.h  Info  README.md  Tracker.cpp  Tracker.h  Tracker2.cpp  Tracker2.h  fps.h  gsl_helper.c  gsl_helper.h
BlobDetection/: CMakeLists.txt  README  blob.c  blob.h  depthtree.c  depthtree.h  depthtree_macros.h  example.h  example1.c  example2.c  settings.h  threshtree.c  threshtree.h  threshtree_macros.h  threshtree_macros_old.h  threshtree_old.c  tree.c  tree.h
apps/: CMakeLists.txt
apps/DisplayBlobs/: CMakeLists.txt  DisplayBlobs.cpp
apps/colourDirection/: CMakeLists.txt  Graphics.cpp  main.cpp  start
apps/displayblobs/: CMakeLists.txt  DisplayBlobs.cpp
apps/gestures/: CMakeLists.txt  Graphics.cpp  main.cpp  start
apps/pong/: CMakeLists.txt  Graphics.cpp  Graphics.h  GraphicsPong.h  Pong.cpp  Pong.h  main.cpp  start
apps/raspicam/: CMakeLists.txt  DrawingFunctions.cpp  DrawingFunctions.h  Graphics.cpp  Graphics.h  GraphicsStub.h  RaspiCamControl.c  RaspiImv.c  RaspiImv.h  RaspiTex.c  RaspiTex.h  RaspiTexUtil.c  RaspiTexUtil.h  RaspiVid.c  RaspiVid.h  lodepng.h  main.cpp  norm2.c  start
apps/raspicam/gl_scenes/: motion.c  motion.h  pong.c  pong.h  square.c
apps/raspicam/shader/: blobfragshader.glsl  blobsfragshader.glsl  guifragshader.glsl  guivertshader.glsl  pongfragshader.glsl  simplefragshader.glsl  simplevertshader.glsl
apps/raspicam/shader/gl_scenes/: pong2.frag.glsl  pong3.frag.glsl  pong4.vert.glsl
apps/test1/: CMakeLists.txt  camera.cpp  camera.h  graphics.cpp  graphics.h  helper.cpp  helper.h  picam.cpp  util.cpp  util.h
include/: Blob.h  Fps.h  Graphics.h  Tracker.h  TrackerDrawingOpenCV.h  TrackerDrawingOpenGL.h
libs/: CMakeLists.txt
libs/blobdetection/: AUTHORS  CMakeLists.txt  depthtree.c  depthtree.h  example2.c  threshtree.c  threshtree.h  threshtree_macros.h  threshtree_macros_old.h  tree.h
libs/freetypeGlesRpi/: CMakeLists.txt  NOTES
libs/raspicam/: CMakeLists.txt  DrawingFunctions.cpp  DrawingFunctions.h  FontManager.cpp  FontManager.h  GfxProgram.cpp  GfxProgram.h  GraphicsStub.h  RaspiImv.c  RaspiImv.h  RaspiTex.c  RaspiTex.h  RaspiTexUtil.c  RaspiVid.h  lodepng.h  norm2.c  norm2.h
libs/raspicam/gl_scenes/: motion.c  pong.c  square.c
libs/tracker/: CMakeLists.txt  DrawingOpenCV.cpp  DrawingOpenGL.cpp  Tracker.cpp  Tracker2.cpp
misc/: compareLongAddition.c  testIntegerSqrt.c
shader/: blobids_fragshader.glsl  blobsvertshader.glsl  guifragshader.glsl  guivertshader.glsl  simplefragshader.glsl
shader/fontrendering/: font1.frag.glsl  font1.vert.glsl
shader/gl_scenes/: pong1.frag.glsl  pong2.vert.glsl  pong4.frag.glsl
